--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -2,7 +2,7 @@
   "name": "@ewl/button",
   "version": "0.1.0",
   "description": "button",
-  "main": "lib/index.tsx",
+  "main": "lib/index.js",
   "module": "es6/index.js",
   "types": "es6/index.d.ts",
   "source": "src/index.tsx",
@@ -14,14 +14,6 @@
   "author": "lileilei <lileilei@ewell.cc>",
   "homepage": "https://github.com/Ewell-FE/ew-material.github.io",
   "license": "MIT",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib",
-    "es6"
-  ],
   "publishConfig": {
     "access": "public"
   },
