--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,15 +1,5 @@
 {
   "name": "ew-material-configs",
   "private": true,
-  "version": "0.1.0",
-  "dependencies": {
-    "@types/react": "^16.9.13",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.7.2"
-  },
-  "devDependencies": {
-    "@types/jest": "^24.0.23",
-    "jest": "^24.9.0"
-  }
+  "version": "0.1.0"
 }
