--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,19 +14,12 @@
   "author": "lileilei <lileilei@ewell.cc>",
   "homepage": "https://github.com/Ewell-FE/ew-material.github.io",
   "license": "MIT",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ewell-FE/ew-material/tree/master/packages/button"
+    "url": "https://github.com/Ewell-FE/ew-material/tree/master/packages/core"
   },
   "scripts": {
     "clean": "rimraf lib es6 types coverage",
@@ -38,7 +31,8 @@
     "start:tsc:es6": "yarn build:tsc:es6 --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "@ewl/button": "^0.0.5-alpha.0",
+    "@ewl/button": "^0.1.0",
+    "@types/node": "^12.12.14",
     "ew-material-configs": "^0.1.0",
     "react": "^16.12.0"
   },
