--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ewl/core",
-  "version": "0.1.0",
+  "version": "0.1.2-alpha.0",
   "description": "core is app main",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -31,9 +31,9 @@
     "start:tsc:es6": "yarn build:tsc:es6 --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "@ewl/button": "^0.1.0",
+    "@ewl/button": "^0.1.2-alpha.0",
     "@types/node": "^12.12.14",
-    "ew-material-configs": "^0.1.0",
+    "ew-material-configs": "^0.1.2-alpha.0",
     "react": "^16.12.0"
   },
   "devDependencies": {
