--- a/package.json
+++ b/package.json
@@ -5,28 +5,35 @@
     "lerna": "^3.19.0"
   },
   "scripts": {
+    "precommit": "pretty-quick --staged",
     "clean": "lerna run clean && lerna clean --yes && rimraf node_modules",
     "start": "yarn build && lerna run start --parallel",
-    "build": "lerna run build --concurrency=1 --stream",
-    "test": "lerna run test --concurrency=1 --stream",
-    "test:quick": "lerna run test:quick --concurrency=1 --stream",
+    "build": "lerna run build --concurrency=2 --stream",
+    "test": "lerna run test --concurrency=2 --stream",
+    "test:quick": "lerna run test:quick --concurrency=2 --stream",
     "test:coverage": "cat packages/*/coverage/lcov.info | coveralls",
     "publish:release": "lerna publish --tag-version-prefix=\"\" --force-publish=* --no-push --no-git-tag-version",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint --fix",
-    "lint:all": "yarn lint 'packages/*/**/*.ts?' 'packages/*/*.js'",
+    "lint": "eslint  --cache --cache-location ./node_modules/.cache/eslint --fix",
+    "lint:all": "yarn lint 'packages/*/**/*.ts?'",
     "lint:staged": "lint-staged --debug"
   },
   "devDependencies": {
     "eslint": "6.4.0",
-    "eslint-config-ringcentral-typescript": "2.1.1",
+    "prettier": "^1.19.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "standard": "^14.3.1",
     "husky": "3.0.5",
     "lerna": "3.16.4",
     "lint-staged": "9.3.0",
-    "prettier": "1.18.2",
     "rimraf": "3.0.0",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "babel-eslint": "^10.0.3",
+    "eslint-config-prettier": "^6.7.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/Ewell-FE/ewl/issues"
+  }
 }
