--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -22,6 +22,8 @@
     "url": "https://github.com/Ewell-FE/ew-material/tree/master/packages/button"
   },
   "scripts": {
+    "test": "jest",
+    "test:quick": "yarn test",
     "clean": "rimraf lib es6 types coverage",
     "build": "yarn clean && yarn build:tsc:es5 && yarn build:tsc:es6",
     "build:tsc:es5": "tsc",
@@ -45,6 +47,10 @@
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "moduleFileExtensions": ["js","jsx","ts","tsx","json","node"]
   },
   "gitHead": "fc4f886cd906a97ddf367d0124b1634635ea5bec"
 }
