--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,10 +32,11 @@
   },
   "dependencies": {
     "@ewl/button": "^0.1.2-alpha.3",
-    "@types/node": "^12.12.14",
+    "@material-ui/core": "^4.7.1",
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@types/node": "^12.12.14",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.13",
     "ew-material-configs": "^0.1.2-alpha.3",
