--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -31,7 +31,8 @@
     "serve": "next start"
   },
   "dependencies": {
-    "@ewl/core": "^0.1.2-alpha.2",
+    "@ewl/core": "^0.1.2-alpha.3",
+    "@material-ui/core": "^4.7.1",
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
