--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ewl/core",
-  "version": "0.1.2-alpha.3",
+  "version": "0.1.2",
   "description": "core is app main",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -31,15 +31,15 @@
     "start:tsc:es6": "yarn build:tsc:es6 --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "@ewl/button": "^0.1.2-alpha.3",
+    "@ewl/button": "^0.1.2-alpha.4",
     "@material-ui/core": "^4.7.1",
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "@types/node": "^12.12.14",
     "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.2-alpha.3",
+    "ew-material-configs": "^0.1.2",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
