--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,7 +1,7 @@
 {
   "name": "examples",
   "private": true,
-  "version": "0.1.2-alpha.3",
+  "version": "0.1.2",
   "description": "demo",
   "keywords": [
     "react",
@@ -31,7 +31,7 @@
     "serve": "next start"
   },
   "dependencies": {
-    "@ewl/core": "^0.1.2-alpha.3",
+    "@ewl/core": "^0.1.2",
     "@material-ui/core": "^4.7.1",
     "next": "^9.1.4",
     "react": "^16.12.0",
@@ -41,7 +41,7 @@
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.2-alpha.3",
+    "ew-material-configs": "^0.1.2",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
