--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -42,23 +42,13 @@
     "ew-material-configs": "^0.1.2",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.2"
   },
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "ts",
-      "tsx",
-      "json",
-      "node"
-    ]
   },
   "gitHead": "fc4f886cd906a97ddf367d0124b1634635ea5bec"
 }
