--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,5 +1,11 @@
 {
   "name": "ew-material-configs",
   "private": true,
-  "version": "0.1.2"
+  "version": "0.1.2",
+  "devDependencies": {
+    "react-test-renderer": "^16.12.0"
+  },
+  "dependencies": {
+    "ts-jest": "^24.2.0"
+  }
 }
