--- a/packages/configs/tsconfig.json
+++ b/packages/configs/tsconfig.json
@@ -15,14 +15,10 @@
     "pretty": true,
     "resolveJsonModule": true,
     "sourceMap": true,
-    "target": "es5",
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "target": "es5"
   },
-  "include": [
-    "./node_modules/@material-ui/**/*.js",
-    "**/*.tsx"
-  ],
-  "exclude": []
+  "typeRoots": ["node_modules/@types"],
+  "exclude": [
+    "node_modules"
+  ]
 }
