--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "@ewl/button": "^0.1.2-alpha.4",
     "@material-ui/core": "^4.7.1",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "ts-jest": "^24.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
@@ -42,6 +43,7 @@
     "ew-material-configs": "^0.1.2",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.2"
   },
