--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -25,7 +25,6 @@
   },
   "scripts": {
     "clean": "rimraf .next coverage",
-    "test": "jest",
     "start": "next",
     "build": "next build",
     "serve": "next start"
@@ -35,7 +34,8 @@
     "@material-ui/core": "^4.7.1",
     "next": "^9.1.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "ts-jest": "^24.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
@@ -44,6 +44,7 @@
     "ew-material-configs": "^0.1.2",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.0",
     "typescript": "^3.7.2"
   },
