--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -42,11 +42,12 @@
     "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
+    "asyncctx": "^2.0.13",
     "class-validator": "^0.11.0",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "http-proxy": "^1.18.0",
-    "immer": "^5.0.0",
+    "immer": "^6.0.9",
     "jaeger-client": "^3.17.1",
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
@@ -59,10 +60,12 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.3",
     "react-redux": "^7.1.3",
-    "redux": "3.7.2",
+    "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-observable": "^1.2.0",
     "serve-favicon": "^2.5.0",
     "ts-jest": "^24.2.0",
+    "universal-rxjs-ajax": "^2.0.4",
     "url-parse": "^1.4.7",
     "zone-context": "^1.1.0"
   },
