--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ewl/button",
-  "version": "0.1.2-alpha.4",
+  "version": "0.1.2",
   "description": "button",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.2",
+    "ew-material-configs": "^0.1.3",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
