--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ewl/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "core is app main",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -31,7 +31,7 @@
     "start:tsc:es6": "yarn build:tsc:es6 --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "@ewl/button": "^0.1.2-alpha.4",
+    "@ewl/button": "^0.1.2",
     "@material-ui/core": "^4.7.1",
     "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
@@ -43,7 +43,7 @@
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.2",
+    "ew-material-configs": "^0.1.3",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
