--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -40,9 +40,9 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
+    "@ewl/ts-configs": "^0.1.3",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.3",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
