--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,10 +40,10 @@
     "ts-jest": "^24.2.0"
   },
   "devDependencies": {
+    "@ewl/ts-configs": "^0.1.3",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
-    "ew-material-configs": "^0.1.3",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
