--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -70,12 +70,12 @@
     "zone-context": "^1.1.0"
   },
   "devDependencies": {
+    "@ewl/ts-configs": "^0.1.3",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.23",
     "@types/next": "^9.0.0",
     "@types/react": "^16.9.13",
     "@zeit/next-less": "^1.0.1",
-    "ew-material-configs": "^0.1.3",
     "jest": "^24.9.0",
     "less-vars-to-js": "^1.3.0",
     "nodemon": "^2.0.1",
