--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
   "homepage": "https://github.com/Ewell-FE/ew-material.github.io",
   "license": "MIT",
   "publishConfig": {
-    "registry": "http://192.168.150.59:8081/repository/npm-host1"
+    "registry": "http://192.168.150.59:8081/repository/npm-host1/"
   },
   "repository": {
     "type": "git",
@@ -54,5 +54,6 @@
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
-  }
+  },
+  "gitHead": "7c4d2fdd5f4b32210a932ff791e18a5ba3839cf7"
 }
