--- a/plugins/material-ui-docs/package.json
+++ b/plugins/material-ui-docs/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "author": "Material-UI Team",
   "description": "Material-UI Docs - Documentation building blocks.",
-  "main": "./src/index.js",
+  "main": "src/index.js",
   "keywords": [
     "react",
     "react-component",
