--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ewl/button",
   "private": true,
-  "version": "0.1.10",
+  "version": "0.1.11-alpha.0",
   "description": "button",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -41,7 +41,7 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "@ewl/ts-configs": "^0.1.11",
+    "@ewl/ts-configs": "^0.1.12-alpha.0",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.13",
     "jest": "^24.9.0",
