--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ewl/ts-configs",
-  "version": "0.1.11",
+  "version": "0.1.12-alpha.0",
   "license": "MIT",
   "publishConfig": {
     "registry": "http://192.168.150.59:8081/repository/npm-host1"
