--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "asyncctx": "^2.0.13",
+    "ca-sdk": "^0.0.1",
     "class-validator": "^0.11.0",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
@@ -86,7 +87,7 @@
     "rimraf": "^3.0.0",
     "swagger-ui-express": "^4.1.2",
     "ts-node": "^8.5.4",
-    "typescript": "^3.7.2"
+    "typescript": "^4.0.0-beta"
   },
   "peerDependencies": {
     "next": ">=9.0.0",
