--- a/plugins/dubbo2-ts/tsconfig.es6.json
+++ b/plugins/dubbo2-ts/tsconfig.es6.json
@@ -2,7 +2,10 @@
   "extends": "@ewl/ts-configs/tsconfig.es6.json",
   "compilerOptions": {
     "allowJs": false,
-    "outDir": "es6"
+    "declaration": true,
+    "downlevelIteration": true,
+    "outDir": "es6",
+    "declarationDir": "./es6/typings"
   },
   "include": [
     "src"
