--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -42,14 +42,18 @@
     "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
+    "apache-dubbo-js": "^3.0.0-rc6",
     "asyncctx": "^2.0.13",
     "ca-sdk": "^0.0.1",
     "class-validator": "^0.11.0",
     "cross-env": "^6.0.3",
+    "dubbo2-ts": "^0.0.1",
     "express": "^4.17.1",
     "http-proxy": "^1.18.0",
     "immer": "^6.0.9",
+    "interpret-util": "^0.0.6",
     "jaeger-client": "^3.17.1",
+    "js-to-java": "^2.6.1",
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
     "markdown-to-jsx": "^6.10.3",
