--- a/plugins/dubbo2-ts/tsconfig.es6.json
+++ b/plugins/dubbo2-ts/tsconfig.es6.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "allowJs": false,
     "declaration": true,
-    "downlevelIteration": true,
     "outDir": "es6",
-    "declarationDir": "./es6/typings"
+    "incremental": true,
+    "tsBuildInfoFile": "./.tscache/tscache"
   },
   "include": [
     "src"
