--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -47,6 +47,7 @@
     "class-validator": "^0.11.0",
     "cross-env": "^6.0.3",
     "dubbo2-ts": "^0.0.1",
+    "dubbo2-ts-docs": "^0.0.1",
     "express": "^4.17.1",
     "http-proxy": "^1.18.0",
     "immer": "^6.0.9",
