--- a/plugins/dubbo2-ts-docs/package.json
+++ b/plugins/dubbo2-ts-docs/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "dubbo2-ts",
+  "name": "dubbo2-ts-docs",
   "version": "0.0.1",
-  "description": "dubbo for nodejs",
+  "description": "docs for dubbo2-ts",
   "keywords": [
-    "dubbojs"
+    "dubbojs",
+    "docs"
   ],
   "author": "lileilei <lileilei@ewell.cc>",
   "homepage": "http://192.168.150.61:2080/Web-team/sh-emr-group/packages",
@@ -38,18 +39,7 @@
     "url": "https://github.com/Ewell-FE/ewl/issues"
   },
   "dependencies": {
-    "debug": "^4.1.1",
-    "hessian.js": "^2.10.0",
-    "interpret-util": "^0.0.6",
-    "ip": "^1.1.5",
-    "js-to-java": "^2.6.1",
-    "koa-compose": "^4.1.0",
-    "npm-run-all": "^4.1.5",
-    "rxjs": "^6.6.2",
-    "urllib": "^2.36.1"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/ip": "^1.1.0"
   }
 }
