--- a/docs/package.json
+++ b/docs/package.json
@@ -113,7 +113,7 @@
     "styled-components": "^5.0.0",
     "url-loader": "^2.1.0",
     "webfontloader": "^1.6.28",
-    "webpack": "^4.41.0",
+    "webpack": "5.3.2",
     "webpack-bundle-analyzer": "^3.5.1"
   },
   "devDependencies": {
