--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "lint:all": "yarn lint 'packages/*/**/*.ts?'",
     "lint:staged": "lint-staged --debug"
   },
+  "resolutions": {
+    "webpack": "^5.3.2",
+    "next": "^10.0.0"
+  },
   "devDependencies": {
+    "webpack": "5.3.2",
     "prettier": "^1.19.1",
     "standard": "^14.3.1",
     "husky": "3.0.5",
