--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -35,6 +35,7 @@
     "@ewl/core": "^0.1.12-alpha.0",
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@module-federation/nextjs-mf": "^0.0.2",
     "@nestjs/common": "6.10.12",
     "@nestjs/core": "6.10.12",
     "@nestjs/platform-express": "6.10.12",
@@ -57,7 +58,7 @@
     "lodash": "^4.17.15",
     "log4js": "^6.1.0",
     "markdown-to-jsx": "^6.10.3",
-    "next": "^9.3.0",
+    "next": "10.0.0",
     "next-redux-wrapper": "^4.0.1",
     "node-apollo": "^1.2.1",
     "opentracing": "^0.14.4",
@@ -72,6 +73,7 @@
     "ts-jest": "^24.2.0",
     "universal-rxjs-ajax": "^2.0.4",
     "url-parse": "^1.4.7",
+    "webpack": "5.3.2",
     "zone-context": "^1.1.0"
   },
   "devDependencies": {
