--- a/plugins/material-ui-docs/package.json
+++ b/plugins/material-ui-docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@material-ui/docs",
   "version": "4.0.0-beta.3",
-  "private": false,
+  "private": true,
   "author": "Material-UI Team",
   "description": "Material-UI Docs - Documentation building blocks.",
   "main": "src/index.js",
