--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "author": "Material-UI Team",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.1.2",
-    "@material-ui/docs": "^4.0.0-beta.0",
+    "@material-ui/docs": "^4.0.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.18",
     "@material-ui/pickers": "^3.2.5",
