--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ewl/button",
   "private": true,
-  "version": "0.1.11-alpha.0",
+  "version": "0.1.11",
   "description": "button",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -38,12 +38,12 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "@ewl/ts-configs": "^0.1.12-alpha.0",
+    "@ewl/ts-configs": "^0.1.12",
     "@types/express": "^4.17.2",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
-    "@typescript-eslint/parser": "^2.14.0",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.13",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
     "jest": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "raw-loader": "^4.0.0",
