--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ewl/core",
   "private": true,
-  "version": "0.1.12-alpha.0",
+  "version": "0.1.12",
   "description": "core is app main",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -32,7 +32,7 @@
     "start:tsc:es6": "yarn build:tsc:es6 --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "@ewl/button": "^0.1.11-alpha.0",
+    "@ewl/button": "^0.1.11",
     "@material-ui/core": "^4.7.1",
     "@types/express": "^4.17.2",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
@@ -41,7 +41,7 @@
     "ts-jest": "^24.2.0"
   },
   "devDependencies": {
-    "@ewl/ts-configs": "^0.1.12-alpha.0",
+    "@ewl/ts-configs": "^0.1.12",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
