--- a/plugins/material-ui-docs/package.json
+++ b/plugins/material-ui-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@material-ui/docs",
-  "version": "4.0.0-beta.3",
+  "version": "4.0.0",
   "private": true,
   "author": "Material-UI Team",
   "description": "Material-UI Docs - Documentation building blocks.",
@@ -47,7 +47,6 @@
     "@material-ui/utils": "^4.9.6",
     "nprogress": "^0.2.0"
   },
-  "devDependencies": {},
   "publishConfig": {
     "access": "public"
   },
